[package]
name = "arena-readme"
version = "0.1.0"
edition = "2021"

[dependencies]
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.0.2" }
tokio = { version = "1.32.0", features = ["macros"] }
serde_json = { version = "1.0.106", features = ["raw_value"] }

[[bin]]
name = "handler"
path = "api/handler.rs"
